--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </header>
     <div class="page">
         <div class="content">
+            <h2>Feathers in the Wind</h2>
             <div class="story-box">
-                <h2>Feathers in the Wind</h2>
-                <p><em>A retelling of a European Jewish wisdom tale.</em></p>
+                <p id ="description"><em>A retelling of a European Jewish wisdom tale.</em></p>
 
                 <p>Once there was a man whom the entire village knew to be a gossip.
                     He could not wait to share the juiciest piece of gossip with
@@ -43,8 +43,8 @@
             </div>
         </div>
         <div class="logo">
+            <img   height="600px" width="600px" src="https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png">
         </div>
-        <img src="https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png">
     </div>
 </body>
 
